--- a/windows-terminal-quake/windows-terminal-quake.csproj
+++ b/windows-terminal-quake/windows-terminal-quake.csproj
@@ -1,23 +1,20 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 	<PropertyGroup>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<ApplicationIcon>UI\icon.ico</ApplicationIcon>
+		<UseWindowsForms>true</UseWindowsForms>
 		<LangVersion>8.0</LangVersion>
 		<Nullable>enable</Nullable>
 		<OutputPath>bin</OutputPath>
 		<OutputType>WinExe</OutputType>
 		<StartupObject />
-		<TargetFramework>net472</TargetFramework>
+		<TargetFramework>net5.0-windows</TargetFramework>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
 		<PackageReference Include="Polly" Version="7.2.1" />
 		<PackageReference Include="Serilog" Version="2.9.0" />
 		<PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Reference Include="System.Windows.Forms" />
 	</ItemGroup>
 
 	<ItemGroup>
