--- a/windows-terminal-quake/windows-terminal-quake.csproj
+++ b/windows-terminal-quake/windows-terminal-quake.csproj
@@ -1,14 +1,19 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<ApplicationIcon>UI\icon.ico</ApplicationIcon>
 		<UseWindowsForms>true</UseWindowsForms>
-		<LangVersion>8.0</LangVersion>
 		<Nullable>enable</Nullable>
 		<OutputPath>bin</OutputPath>
 		<OutputType>WinExe</OutputType>
 		<StartupObject />
 		<TargetFramework>net5.0-windows</TargetFramework>
+		<PublishSingleFile>true</PublishSingleFile>
+		<SelfContained>true</SelfContained>
+		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
+		<PublishReadyToRun>true</PublishReadyToRun>
+		<IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
+		<AssemblyName>windows-alacritty-quake</AssemblyName>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
